--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ubucrawl",
+  "name": "ubutv",
+  "private": "true",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "jsdom": "^21.1.0"
   }
